[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/halo.png" type="Texture" id=1]
[ext_resource path="res://game/items/scn_placeable_item.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="PlaceableItem" type="Node2D" groups=[
"placeable",
]]
script = ExtResource( 2 )

[node name="HaloSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
texture = ExtResource( 1 )

[node name="MouseCollision" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="MouseCollision"]
modulate = Color( 0.196078, 0.870588, 0.333333, 1 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="MouseCollision" to="." method="_on_MouseCollision_mouse_entered"]
[connection signal="mouse_exited" from="MouseCollision" to="." method="_on_MouseCollision_mouse_exited"]
